# file-rel-type

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MagicEntry.cpp  MagicEntry.h  ParseMagicFile.cpp  ParseMagicFile.h  magic_entry.cpp  magic_entry.h  magic_peg.h  magic_peg_action.hpp  magic_peg_builder.hpp  magic_peg_op_typ.cpp  magic_peg_op_typ.h  magic_peg_op_typ_action.h  magic_peg_predefine.h  magic_tree.cpp  magic_tree.h  magic_type.cpp  magic_type.h  main.cpp  type_endian.cpp  type_endian.h  val_sign_typ.cpp  val_sign_typ.h  val_typ.h  val_typ_format.cpp  val_typ_name.cpp
src/input/: random_buffer_input.hpp  random_istream_input.hpp  random_istream_reader.cpp  random_istream_reader.h
src/magic_ast/: exp.cpp  exp.h  exp_bin.cpp  exp_bin.h  exp_num.cpp  exp_num.h  exp_un.cpp  exp_un.h  magic_ast.h  magic_ast_eval.cpp  magic_ast_eval.h  val.cpp  val.h  var.cpp  var.h
src/magic_ast/elem/: str_flag_t.cpp  str_flag_t.h  val.cpp  val.h  val_sign_typ.cpp  val_typ.cpp  val_typ.h  val_typ_endian.cpp  val_typ_endian.h  val_typ_format.h  val_typ_name.h  var.cpp  var.h
src/magic_ast/eval/: cast_var.h  eval_binop.cpp  eval_binop.h  eval_exp.cpp  eval_exp.h  eval_magic_tree.cpp  eval_magic_tree.h  eval_unop.cpp  eval_unop.h  fetcher.h  magic_ast_eval.cpp  magic_ast_eval.h  read_number.hpp  read_string.hpp  type_cast.h  type_cast.hpp  type_dispatcher.h  type_dispatcher.hpp  type_lift.cpp  type_lift.h  type_lift_val.cpp  type_lift_val.h  type_priority.cpp  type_priority.h  val_fetcher.h  val_fetcher.hpp
src/magic_peg/: magic_peg.h  magic_peg_action.hpp  magic_peg_op_typ.h  magic_peg_op_typ_action.cpp  magic_peg_op_typ_action.h
src/pegtl-helper/: ascii.hpp  exact.hpp  integer.hpp  line.hpp  switcher.hpp
src/utils/: log.h  print_memory.h  stl_container_helper.h  tree.hpp
src/utils/tao/pegtl/: ascii.hpp  change_action_and_states_in_place.hpp  integer.hpp  rep_min_max_or_more.hpp  switcher.hpp
src/utils/type_traits/: make_int_type.hpp
tests/: CMakeLists.txt  domain_path.h  print_magic_tree.h  test_magic_peg.cpp  test_magic_peg_builder.cpp  test_magic_peg_predefine.cpp  test_magic_peg_predefine_action.cpp  test_pegtl_helper.hpp
tests/input/: test_random_input.cpp
tests/magic_ast/: test_read_number.cpp
tests/magic_ast/eval/: test_eval_binop.cpp  test_eval_magic_tree.cpp  test_eval_unop.cpp  test_type_cast.cpp  test_type_lift.cpp  test_val_fetcher.cpp
tests/magic_peg_action/: test_1_offset_action.cpp  test_2_deref_type_action.cpp  test_3_relation_action.cpp  test_deref_type_action.cpp  test_file_action.cpp  test_offset_action.cpp
tests/magic_peg_builder/: test_deref_type_builder.cpp  test_description_type_code.cpp  test_file_builder.cpp  test_offset_builder.cpp
tests/pegtl-helper/: test_change_action_and_states_in_place.cpp  test_integer.cpp  test_integer_action.cpp  test_switcher.cpp
tests/resources/magic/: images  msdos  msooxml  ole2compounddocs  pdf  vms  vmware
tests/resources/office/doc/: A.doc
tests/resources/office/docx/: A.docx
tests/test_magic_peg_builder/: test_deref_type_builder.cpp  test_file_builder.cpp  test_offset_builder.cpp
tests/utils/tao/pegtl/: test_integer.cpp  test_integer_action.cpp  test_switcher.cpp
third-part/magic/include/: file_type.h  magic.h
third-part/magic/lib/: libmagic.lib
